@@ -23,7 +23,7 @@
 typedef int _Atomic_word;
 
 static inline _Atomic_word 
-__attribute__ ((unused))
+__attribute__ ((__unused__))
 __exchange_and_add (volatile _Atomic_word *__mem, int __val)
 {
   register _Atomic_word __result;
@@ -56,3 +56,5 @@ __compare_and_swap (volatile long* __p, long __oldval, long __newval)
 }
 
 #endif /* atomicity.h */
+
+
